feat(portfolio): Implementa a gestão completa de portfólio e integra com o bot